package com.catodev.onechallengeforum;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class OneChallengeForumApplication {

    public static void main(String[] args) {
        SpringApplication.run(OneChallengeForumApplication.class, args);
    }

}
