package com.catodev.onechallengeforum.dto.auth;

public record JwtTokenDto(
        String token
) {}