package com.catodev.onechallengeforum.dto.auth;

import jakarta.validation.constraints.Email;
import jakarta.validation.constraints.NotBlank;

public record RegisterUserDto(
        @NotBlank(message = "Name is required")
        String name,
        @NotBlank(message = "Email is required") @Email(message = "Invalid email")
        String email,
        @NotBlank(message = "Password is required")
        String password
) {}
